--- a/fenics-env.yml
+++ b/fenics-env.yml
@@ -7,7 +7,7 @@ dependencies:
   - matplotlib
   - connected-components-3d
   - scikit-image
-  - scipy
+  - scipy=1.7.3
   - nibabel
   - h5py
   - pip
@@ -17,4 +17,5 @@ dependencies:
     - parse
     - git+https://github.com/dolfin-adjoint/pyadjoint.git@2019.1.2
     - git+https://github.com/SVMTK/SVMTK
+
 
