--- a/fenics-env.yml
+++ b/fenics-env.yml
@@ -1,11 +1,11 @@
-name: diffusion-fenics-env
+name: fenics-env
 channels:
   - conda-forge
+  - defaults
 dependencies:
-  - fenics=2019.1.0=py39hf3d152e_29
+  - fenics-dolfin
   - numpy
   - matplotlib
-  - connected-components-3d
   - scikit-image
   - scipy=1.7.3
   - nibabel
@@ -14,8 +14,8 @@ dependencies:
   - pip:
     - meshio
     - tqdm
+    - connected-components-3d
     - parse
     - git+https://github.com/dolfin-adjoint/pyadjoint.git@2019.1.2
-    - git+https://github.com/SVMTK/SVMTK
 
 
