Internal review round (#8)
* suggested changes for running code

* removed unnecesary mesh libs from jax-fenics-env

---------

--- a/jax-fenics-env.yml
+++ b/jax-fenics-env.yml
@@ -1,6 +1,7 @@
 name: jax-fenics-env
 channels:
   - conda-forge
+  - nvidia  # needed for cuda-toolkit. if specific version is required, this needs to be changed.
 dependencies:
   - numpy
   - matplotlib
@@ -11,7 +12,11 @@ dependencies:
   - h5py
   - scikit-image
   - nibabel
-  - pip:
+  - tqdm
+  - parse
+  - optax
+  - cuda-toolkit 
+  - pip: 
     - jax
     - jaxtyping
     - jaxopt
